# goldpinger

./: .dockerignore  .gitignore  BUILD  Dockerfile  Gopkg.toml  Main.elm  Makefile  README.md  WORKSPACE  elm-package.json  go.mod  go.sum  kubernetes.yaml  main.go  styles.css
Godeps/: Godeps.json
cmd/goldpinger/: BUILD.bazel  main.go
cmd/wasm/: BUILD.bazel  main.go  model.go  model_test.go
elm-stuff/: exact-dependencies.json
hack/: deploy-loop.sh  deploy.sh  dev-loop.sh  lint.mk  minikube.mk
pkg/: BUILD.bazel  fetch_http.go  gossip.go  handler.go  main_loop.go  measuring.go  mock.go  model.go  model_test.go  nodes.go  ok.go  status.go  targets.go  update.go
pkg/k8s/: BUILD.bazel  targets.go
public/: index.html  wasm_exec.js
