load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/damoon/goldpinger/cmd/goldpinger",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg:go_default_library",
        "//pkg/k8s:go_default_library",
        "//vendor/github.com/lpar/gzipped:go_default_library",
    ],
)

go_binary(
    name = "goldpinger",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
