load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/damoon/goldpinger/cmd/goldpinger",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg:go_default_library",
        "//pkg/k8s:go_default_library",
        "//vendor/github.com/lpar/gzipped:go_default_library",
    ],
)

go_binary(
    name = "goldpinger",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)


load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_pull")

container_image(
    name = "base_image",
#    base = "@go_image_base//image",
    base = "@alpine//image",
    tars = ["//:assets", "//cmd/wasm:tar"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    embed = [":go_default_library"],
    base = ":base_image",
    visibility = ["//visibility:public"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)
