load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "model.go",
    ],
    importpath = "github.com/damoon/goldpinger/cmd/wasm",
    visibility = ["//visibility:private"],
    deps = ["//pkg:go_default_library"],
)

go_binary(
    name = "wasm",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goarch = "wasm",
    goos = "js",
    pure = "on",
)

go_test(
    name = "go_default_test",
    srcs = ["model_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg:go_default_library"],
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "tar",
    srcs = [":wasm"],
    mode = "0o644",
    package_dir = "/public",
    visibility = ["//visibility:public"],
)
